crates/strz-grammar/tests/snapshots/fixtures__fixture@deployment__animation_ok.snap
---
source: crates/strz-grammar/tests/fixtures.rs
expression: tree_sexp(&tree)
---
(source_file
  (workspace body:
    (workspace_block
      (model body:
        (model_block
          (software_system identifier:
            (identifier) name:
            (string) body:
            (software_system_block
              (container identifier:
                (identifier) name:
                (string) body:
                (container_block
                  (tag_statement value:
                    (string))))
              (container identifier:
                (identifier) name:
                (string) body:
                (container_block
                  (tag_statement value:
                    (string))))))
          (relationship source:
            (identifier) operator:
            (relationship_operator) destination:
            (identifier))
          (deployment_environment identifier:
            (identifier) name:
            (string) body:
            (deployment_environment_block
              (deployment_node identifier:
                (identifier) name:
                (string) body:
                (deployment_node_block
                  (container_instance identifier:
                    (identifier) target:
                    (identifier))
                  (container_instance identifier:
                    (identifier) target:
                    (identifier))))))))
      (views body:
        (views_block
          (deployment_view scope:
            (identifier) environment:
            (string) body:
            (deployment_view_block
              (include_statement value:
                (wildcard))
              (animation_statement body:
                (animation_block value:
                  (identifier) value:
                  (identifier)))))
          (deployment_view scope:
            (identifier) environment:
            (string) body:
            (deployment_view_block
              (include_statement value:
                (wildcard))
              (animation_statement body:
                (animation_block value:
                  (identifier) value:
                  (identifier)))))
          (deployment_view scope:
            (identifier) environment:
            (string) body:
            (deployment_view_block
              (include_statement value:
                (wildcard))
              (animation_statement body:
                (animation_block value:
                  (identifier) value:
                  (bare_value)))))
          (deployment_view scope:
            (identifier) environment:
            (string) body:
            (deployment_view_block
              (include_statement value:
                (wildcard))
              (animation_statement body:
                (animation_block value:
                  (identifier) value:
                  (bare_value)))))
          (deployment_view scope:
            (identifier) environment:
            (string) body:
            (deployment_view_block
              (include_statement value:
                (wildcard))
              (animation_statement body:
                (animation_block value:
                  (bare_value) value:
                  (bare_value))))))))))
