crates/strz-grammar/tests/snapshots/fixtures__fixture@deployment__instance_assignment_and_tags_ok.snap
---
source: crates/strz-grammar/tests/fixtures.rs
expression: tree_sexp(&tree)
---
(source_file
  (workspace body:
    (workspace_block
      (model body:
        (model_block
          (software_system identifier:
            (identifier) name:
            (string) body:
            (software_system_block
              (container identifier:
                (identifier) name:
                (string))))
          (deployment_environment identifier:
            (identifier) name:
            (string) body:
            (deployment_environment_block
              (deployment_group identifier:
                (identifier) name:
                (string))
              (deployment_node identifier:
                (identifier) name:
                (string) body:
                (deployment_node_block
                  (software_system_instance identifier:
                    (identifier) target:
                    (identifier))
                  (software_system_instance identifier:
                    (identifier) target:
                    (identifier) deployment_group:
                    (identifier) tags:
                    (string))
                  (container_instance identifier:
                    (identifier) target:
                    (identifier) deployment_group:
                    (identifier) tags:
                    (string)))))))))))
